trunk/Archive2/d5/4cea1133a28f65/output
main.cpp: In function 'int main()':
main.cpp:20:36: error: expected '}' at end of input
     std::cout << words << std::endl;
                                    ^
